<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ActivityDetailFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textSize="30sp"
        tools:text="Activity Title"/>

    <TextView
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/activity_detail_start_date" />

    <Button
        android:id="@+id/startDateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/startDate"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="11:00 21/21/21"
        android:textSize="11sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/startDate"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/activity_detail_end_date" />

    <Button
        android:id="@+id/endDateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/endDate"
        app:layout_constraintTop_toBottomOf="@id/startDateBtn"
        tools:text="11:00 21/21/21"
        android:textSize="11sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/endDate"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="90dp"
        android:layout_marginStart="20dp"
        android:text="@string/activity_detail_count" />

    <NumberPicker
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/count"
        app:layout_constraintTop_toBottomOf="@id/endDateBtn"
        android:layout_marginStart="100dp"/>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/counter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>